Squash 'NavBar' Z-index Bug & Add Unique Key to Article Anchor Tags

--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -9,6 +9,7 @@
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-color: hsla(0, 0%, 0%, 0.1);
+  z-index: 1;
 }
 
 #logo {
